syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SubscribeToBoardUpdates (SubscriptionRequest) returns (stream BoardUpdate);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message SubscriptionRequest {
  string client_id = 1;
}

message BoardUpdate {
  string board_state = 1;
  bool is_white_turn = 2;
  bool game_over = 3;
  optional string winner = 4; // Dodane 'optional'
}