syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "App.Grpc";

package checkers;

service CheckersEvaluationService {
  rpc MinimaxSearch (MinimaxRequest) returns (MinimaxResponse);
}

message MinimaxRequest {
  repeated uint32 board = 1;
  int32 depth = 2;
  bool isMaximizing = 3;
  google.protobuf.Timestamp request_time = 4;
}

message MinimaxResponse {
  int32 score = 1;
  google.protobuf.Timestamp response_time = 2;
}

